feat: add SQL propagation signals
